[package]
name = "FromFix"
version = "0.1.0"
edition = "2021"
description = "All-in-One Ultrawide / framerate / FOV fix for Sekiro: Shadows Die Twice"
license = "MIT"

# Built as a winmm.dll proxy: it forwards every real winmm export (see winmm.def)
# and runs the fix from DllMain, so it drops straight into the game folder.
[lib]
name = "winmm"
crate-type = ["cdylib"]

[dependencies]
# Patched, vendored fork of ilhook that exposes xmm0-xmm15 in Registers.
ilhook = { path = "vendor/ilhook", default-features = false, features = ["x64"] }
windows-sys = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_LibraryLoader",
    "Win32_System_Memory",
    "Win32_System_Threading",
    "Win32_System_Diagnostics_Debug",
] }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
panic = "abort"
