[package]
name = "FromFix"
version = "0.2.4"
edition = "2021"
description = "All-in-One Ultrawide / framerate / FOV fix for FromSoft Games"
license = "MIT"

# Built as a winmm.dll proxy: it forwards every real winmm export (see winmm.def)
# and runs the fix from DllMain, so it drops straight into the game folder.
[lib]
name = "winmm"
crate-type = ["cdylib"]

[dependencies]
# Patched, vendored fork of ilhook that exposes xmm0-xmm15 in Registers.
ilhook = { path = "vendor/ilhook", default-features = false, features = ["x64"] }
windows-sys = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_LibraryLoader",
    "Win32_System_Memory",
    "Win32_System_Threading",
    "Win32_System_Diagnostics_Debug",
    "Win32_UI_WindowsAndMessaging",
] }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
panic = "abort"
